(lang dune 3.20)

(name pml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Thorsten Ohl <ohl@physik.uni-wuerzburg.de>")

(maintainers "Thorsten Ohl <ohl@physik.uni-wuerzburg.de>")

(license "GPL 3.0")

(documentation https://url/to/documentation)

(package
 (name pml)
 (synopsis "Physical Media Library")
 (description "Cataloging and ripping physical discs with interface to MusicBrainz")
 (depends ocaml)
 (tags
  ("music" "media")))
