(library
  (name pml)
  (public_name pml)
  (modules
    Mb_error
    Musicbrainz Tags Discid Query Cache
    Artist_type Lifespan Date
    Edit Result_list Option_syntax)
  (private_modules )
  ; (wrapped false)
  (inline_tests)
  (preprocess (pps ppx_inline_test))
  (flags (:standard -I +unix))
  ; (ocamlc_flags (:standard))
  (ocamlopt_flags (:standard -inline 32))
  (libraries
    clibdiscid
    curl jsont jsont.bytesrw re ubase unix))

(documentation
  (package pml)
  (mld_files index))
