(library
  (name pml)
  (public_name pml)
  (modules
    Tags Taggable
    Mb_release Mb_medium Mb_disc
    Mb_track Mb_recording
    Mb_artist Mb_artist_credit
    Mb_error Mb_raw Cached
    Libdiscid Query Sets Cache
    Artist_type Lifespan Date
    Edit Result_list Option_syntax)
  (private_modules )
  ; (wrapped false)
  (inline_tests)
  (preprocess (pps ppx_inline_test))
  (flags (:standard -I +unix))
  ; (ocamlc_flags (:standard))
  (ocamlopt_flags (:standard -inline 32))
  (libraries
    clibdiscid
    curl jsont jsont.bytesrw re ubase unix))

(documentation
  (package pml)
  (mld_files index))
