(library
  (name pml_lib)
  (public_name pml_lib)
  (modules
    Rip Tagged Release Medium Track Artist Taggable
    Mb_release Mb_medium Mb_disc Mb_track Mb_recording
    Mb_artist Mb_artist_credit
    Mb_error Json Cached
    Artist_type Lifespan Date
    Libdiscid Query
    Edit Sets Cache Result_list Option_syntax Version)
  (private_modules )
  ; (wrapped false)
  (inline_tests)
  (preprocess (pps ppx_inline_test))
  (flags (:standard -I +unix))
  ; (ocamlc_flags (:standard))
  (ocamlopt_flags (:standard -inline 32))
  (libraries
    clibdiscid
    curl jsont jsont.bytesrw re pcre2 ubase unix))

(documentation
  (package pml_lib)
  (mld_files index))
